Implementacion de CRUD y notificacion por correo para el modulo de citas